Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3873

CID 1320627 Uninitialized variables in TSControlMain.c

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.0
    • Management API, Tools
    • None

    Description

      ** CID 1320627:  Uninitialized variables  (UNINIT)
      /mgmt/api/TSControlMain.cc: 1147 in handle_record_describe(int, void *, unsigned long)()
      
      
      ________________________________________________________________________________________________________
      *** CID 1320627:  Uninitialized variables  (UNINIT)
      /mgmt/api/TSControlMain.cc: 1147 in handle_record_describe(int, void *, unsigned long)()
      1141       if (ret == TS_ERR_OKAY) {
      1142         ret = match.err;
      1143       }
      1144     
      1145     done:
      1146       ats_free(name);
         CID 1320627:  Uninitialized variables  (UNINIT)
         Using uninitialized value "match.err".
      1147       return match.err;
      1148     }
      1149     
      1150     struct control_message_handler {
      1151       unsigned flags;
      1152       TSMgmtError (*handler)(int, void *, size_t);
      

      Attachments

        Activity

          People

            jamespeach James Peach
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: