TS-3873: fix uninitialized return